[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zlmediakit-mcp"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12"
aiohttp = ">=3.8.0"
requests = ">=2.26.0"
python-dotenv = ">=0.19.0"
typing-extensions = ">=4.8.0"
httpx = ">=0.27.0"  # Corrected from 0.27.1 to 0.27.0
mcp = {extras = ["cli"], version = ">=1.6.0"}  # Requires verification