[project]
name = "zlmediakit-mcp"
version = "0.1.0"
description = "ZLMediaKit Media Control Panel"
authors = [
    { name = "wangyafei", email = "wangyafei1991@foxmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
    "typing-extensions>=4.8.0",
    "httpx>=0.27.0",  
    "mcp[cli]>=1.6.0",
]